--- a/EFCoreAuditingDemo/EFCoreAuditingDemo.csproj
+++ b/EFCoreAuditingDemo/EFCoreAuditingDemo.csproj
@@ -14,5 +14,9 @@
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.6" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Common\Common.csproj" />
+	</ItemGroup>
 	
 </Project>
