--- a/EFPlusAuditingDemo/EFPlusAuditingDemo.csproj
+++ b/EFPlusAuditingDemo/EFPlusAuditingDemo.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="5.1.37" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
